--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "daisyui": "^4.12.10",
+    "framer-motion": "^11.5.4",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
