--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
