[created] a dashbord blog analytics section

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.5",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.10",
     "framer-motion": "^11.5.4",
