--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-google-charts": "^5.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
