--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.10",
@@ -18,6 +19,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-google-charts": "^5.1.0",
+    "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
