--- a/package.json
+++ b/package.json
@@ -9,6 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/attaches": "^1.3.0",
+    "@editorjs/checklist": "^1.6.0",
+    "@editorjs/code": "^2.9.2",
+    "@editorjs/delimiter": "^1.4.2",
+    "@editorjs/editorjs": "^2.30.6",
+    "@editorjs/embed": "^2.7.6",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/image": "^2.9.3",
+    "@editorjs/inline-code": "^1.5.1",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/list": "^1.10.0",
+    "@editorjs/marker": "^1.4.0",
+    "@editorjs/quote": "^2.7.2",
+    "@editorjs/raw": "^2.5.0",
+    "@editorjs/table": "^2.4.2",
+    "@editorjs/warning": "^1.4.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "clsx": "^2.1.1",
@@ -22,7 +38,6 @@
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-quill": "^2.0.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
