--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
+    "rss-parser": "^3.13.0",
+    "sanitize-html": "^2.13.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
